--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "granatum-app",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,6 +23,8 @@
     "@angular/router": "^17.3.0",
     "@datorama/akita": "^8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@ngx-translate/core": "^16.0.3",
+    "@ngx-translate/http-loader": "^16.0.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.4",
