--- a/angular.json
+++ b/angular.json
@@ -55,10 +55,17 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.scss"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/assets/scss/_app.scss",
+              "src/styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/scss"
+              ]
+            }
           },
           "configurations": {
             "production": {
@@ -116,23 +123,15 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/assets/scss/_app.scss",
               "src/styles.scss"
             ],
-            "scripts": [],
-            "stylePreprocessorOptions": {
-              "includePaths": [
-                "src/assets/scss"
-              ]
-            }
+            "scripts": []
           }
         }
       }
     }
   },
   "cli": {
-    "analytics": "4e9e7d8b-20dc-47b9-8db7-90318a633233"
+    "analytics": "bab3a178-552f-410b-8e12-c0331f53e6e1"
   }
 }
