--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.8",
+    "@datorama/akita": "^8.0.1",
     "bootstrap": "^5.3.3",
     "dayjs": "^1.11.13",
     "ngx-lottie": "^11.0.2",
