--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/ssr": "^17.3.8",
     "@datorama/akita": "^8.0.1",
     "bootstrap": "^5.3.3",
+    "country-state-city": "^3.2.1",
     "dayjs": "^1.11.13",
     "ngx-lottie": "^11.0.2",
     "ngx-toastr": "^19.0.0",
