--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "country-state-city": "^3.2.1",
     "dayjs": "^1.11.13",
     "ngx-lottie": "^11.0.2",
+    "ngx-mask": "^19.0.1",
+    "ngx-mat-select-search": "^7.0.8",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
