--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ngx-lottie": "^11.0.2",
     "ngx-mask": "^19.0.1",
     "ngx-mat-select-search": "^7.0.8",
+    "ngx-mat-timepicker": "^17.1.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
